default as portrait

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" 
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  style="min-width:300px !important">
-                                Iphone 12 Pro Max (landscape)
+                                Iphone 12 Pro Max (portrait)
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="resDropdown">
                                 <a class="dropdown-item">Iphone 12 Pro Max (landscape)</a>
